--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 # Release Build - Creates distributable installers for all platforms
-# Automatically triggered when version is bumped in tauri.conf.json
-# Creates a GitHub Release with all platform installers attached
+# Automatically triggered by push to main branch
+# Builds and creates GitHub Release with all platform installers attached
 
 name: Release
 
@@ -19,79 +19,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Check if this is actually a version bump that needs a release
-  check-version:
-    name: Check Version Change
-    runs-on: ubuntu-latest
-    outputs:
-      should_release: ${{ steps.check.outputs.should_release }}
-      version: ${{ steps.check.outputs.version }}
-      versions_synced: ${{ steps.check.outputs.versions_synced }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 2  # Need previous commit to compare
-
-      - name: Check for version change
-        id: check
-        run: |
-          # Get current version from tauri.conf.json (source of truth)
-          CURRENT_VERSION=$(node -p "require('./src-tauri/tauri.conf.json').version")
-          echo "Current version: $CURRENT_VERSION"
-          echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
-
-          # Get version from package.json
-          PKG_VERSION=$(node -p "require('./package.json').version")
-          echo "package.json version: $PKG_VERSION"
-
-          # Get version from Cargo.toml
-          CARGO_VERSION=$(grep '^version = ' src-tauri/Cargo.toml | head -1 | sed 's/version = "\(.*\)"/\1/')
-          echo "Cargo.toml version: $CARGO_VERSION"
-
-          # Check if all versions are in sync
-          if [ "$CURRENT_VERSION" = "$PKG_VERSION" ] && [ "$CURRENT_VERSION" = "$CARGO_VERSION" ]; then
-            echo "versions_synced=true" >> $GITHUB_OUTPUT
-            echo "All versions are in sync: $CURRENT_VERSION"
-          else
-            echo "versions_synced=false" >> $GITHUB_OUTPUT
-            echo "::error::Version mismatch! tauri.conf.json=$CURRENT_VERSION, package.json=$PKG_VERSION, Cargo.toml=$CARGO_VERSION"
-            exit 1
-          fi
-
-          # Get previous version from tauri.conf.json
-          git show HEAD~1:src-tauri/tauri.conf.json > /tmp/old-tauri.conf.json 2>/dev/null || echo '{"version":"0.0.0"}' > /tmp/old-tauri.conf.json
-          OLD_VERSION=$(node -p "require('/tmp/old-tauri.conf.json').version" 2>/dev/null || echo "0.0.0")
-          echo "Previous version: $OLD_VERSION"
-
-          # Check if version actually changed
-          if [ "$CURRENT_VERSION" != "$OLD_VERSION" ]; then
-            echo "should_release=true" >> $GITHUB_OUTPUT
-            echo "Version changed from $OLD_VERSION to $CURRENT_VERSION - will create release"
-          else
-            echo "should_release=false" >> $GITHUB_OUTPUT
-            echo "Version unchanged ($CURRENT_VERSION) - skipping release"
-          fi
-
-      - name: Check if release already exists
-        if: steps.check.outputs.should_release == 'true'
-        id: check_release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          VERSION=${{ steps.check.outputs.version }}
-          # Check if tag already exists
-          if git ls-remote --tags origin | grep -q "refs/tags/v$VERSION"; then
-            echo "Release v$VERSION already exists - skipping"
-            echo "should_release=false" >> $GITHUB_OUTPUT
-          fi
-
   # Run tests before building release
   test:
     name: Test & Lint
-    needs: check-version
-    if: needs.check-version.outputs.should_release == 'true'
     runs-on: ubuntu-latest
 
     steps:
@@ -116,30 +46,25 @@ jobs:
   # Build and release for all platforms
   build-release:
     name: Build (${{ matrix.name }})
-    needs: [check-version, test]
-    if: needs.check-version.outputs.should_release == 'true'
+    needs: test
     permissions:
       contents: write
     strategy:
       fail-fast: false
       matrix:
         include:
-          # Windows x64
           - name: Windows
             platform: windows-latest
             args: ''
 
-          # macOS Apple Silicon (M1/M2/M3)
           - name: macOS (Apple Silicon)
             platform: macos-latest
             args: '--target aarch64-apple-darwin'
 
-          # macOS Intel
           - name: macOS (Intel)
             platform: macos-latest
             args: '--target x86_64-apple-darwin'
 
-          # Linux x64
           - name: Linux
             platform: ubuntu-22.04
             args: ''
@@ -179,12 +104,13 @@ jobs:
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
         with:
-          tagName: v${{ needs.check-version.outputs.version }}
-          releaseName: 'Invariant Accounting v${{ needs.check-version.outputs.version }}'
+          createTag: true
+          tagName: v${{ steps.version.outputs.version }}
+          releaseName: 'Invariant Accounting v${{ steps.version.outputs.version }}'
           releaseBody: |
-            ## Invariant Accounting v${{ needs.check-version.outputs.version }}
+            ## Invariant Accounting v${{ steps.version.outputs.version }}
 
             Download the installer for your platform below.
 
@@ -200,11 +126,29 @@ jobs:
           prerelease: false
           args: ${{ matrix.args }}
 
+  # Get version for tagging
+  get-version:
+    name: Get Version Number
+    runs-on: ubuntu-latest
+    needs: [build-release]
+    permissions:
+      contents: read
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Extract version from package.json
+        id: version
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Detected version: $VERSION"
+
   # Create git tag after successful release
   create-tag:
     name: Create Git Tag
-    needs: [check-version, build-release]
-    if: needs.check-version.outputs.should_release == 'true'
+    needs: [build-release, get-version]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -214,10 +158,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Create and push tag
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          VERSION=${{ needs.check-version.outputs.version }}
+          VERSION=${{ needs.get-version.outputs.version }}
+          
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
